[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ksim_env"]

[project]
name = "ksim_env"
version = "0.0.1"
dependencies = [
  "gymnasium",
  "pre-commit",
  "faas-sim==0.0.1.dev1",
  "gymnasium",
  "matplotlib",
  "numpy",
  "pandas",
  "simpy",
  "stable-baselines3",
  "tensorboard"
]
